doctest 0.5.1-dev
=================

  * Tests can now call "clear" and "clear all".

  * Fix for running on Octave development versions (upcoming 4.4.0).



doctest 0.5.0 (2016-11-13)
==========================

  * SKIP_IF and other conditional directives can include small single-line
    blocks of code.  For example:

      - "% doctest: +SKIP_IF(foo() && bar(42))"

  * Recursion into subdirectories is now the default; pass "-nonrecursive"
    for the previous default behaviour.

  * In Texinfo mode, skip tests without output by default.  This is an
    experimental change to help test the GNU Octave project; the feature
    might disappear without warning in a future version.

  * Workaround regex bug on ARM architecture.

  * Minimum supported Octave version is now 4.0.0.



doctest 0.4.1 (2016-01-04)
==========================

  * Added conditional variants of SKIP and XFAIL directives to control test
    execution based on runtime conditions:

      - "% doctest: +SKIP_IF(condition)"
      - "% doctest: +SKIP_UNLESS(condition)"
      - "% doctest: +XFAIL_IF(condition)"
      - "% doctest: +XFAIL_UNLESS(condition)"

  * Added constants DOCTEST_OCTAVE and DOCTEST_MATLAB that can be used as
    conditions in SKIP_IF etc.

  * Improved handling of example code in TexInfo documentation.

      - Added support for @print{} macros, which may be used for output that
        is not part of a returned value.

      - Examples without ">>" markers use code indentation together with
        @result{} / @print{} macros to classify input and output lines in a
        natural way.  It is no longer necessary to split code into several
        @example / @group blocks.

      - Allow arbitrary TexInfo macros.  The documentation is interpreted
        by makeinfo before running the code examples.

      - Fixed handling of TexInfo files with Windows line endings.

  * Improved folder/directory traversals:

      - Ignore hidden (dot) directories.
