@@ -9,6 +9,6 @@ Description: The Octave-Forge Doctest package finds specially-formatted
  the code and confirms the output is correct.  This can be useful as part of
  a testing framework or simply to ensure that documentation stays up-to-date
  during software development.
-Depends: octave (>= 4.0.0)
+Depends: octave (>= 4.2.0)
 Url: https://github.com/catch22/octave-doctest
 License: BSD-3-Clause
