@@ -1,5 +1,0 @@
-all: doctest_evalc.oct
-
-%.oct: %.cc
-	$(MKOCTFILE) $<
-
