@@ -5,6 +5,9 @@ doctest 0.5.1-dev
 
   * Fix for running on Octave development versions (upcoming 4.4.0).
 
+  * Minimum supported Octave version is now 4.2.0.  The package no longer
+    has any compiled code and does not include an "evalc" implementation.
+
 
 
 doctest 0.5.0 (2016-11-13)
